# ognn-pytorch

./: .gitignore  LICENSE  README.md  builder.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py
configs/: cls_m40.yaml  dfaust.yaml  dfaust_eval.yaml  finetune.yaml  shapenet.yaml  shapenet_ae.yaml  shapenet_ae_eval.yaml  shapenet_eval.yaml  shapenet_unseen5.yaml  shapenet_vae.yaml  shapenet_vae_eval.yaml  shapes.yaml  synthetic_room.yaml  synthetic_room_eval.yaml
datasets/: __init__.py  pointcloud.py  pointcloud_eval.py  shapenet.py  shapenet_vae.py  synthetic_room.py  utils.py
ognn/: __init__.py  ae.py  conv.py  loss.py  mpu.py  nn.py  octreed.py  ounet.py  unet.py  utils.py  vae.py
ognn/kernels/: autotuner.py  config.py
scripts/: bash.sh  build_dataset.sh  dfaust.sh  room.sh  shapenet.sh  shapenet_ae.sh  shapes.sh
test/: benchmark.py  test_conv_new.py
tools/: cmp_filelist.py  compute_metrics.py  dfaust.py  list_filenames.py  room.py  shapenet.py  visualize_sdf.py
