[project]
name = "ognn-pytorch"
version = "1.1.2"
description = "Dual Octree Graph Neural Networks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Peng-Shuai Wang", email = "wangps@hotmail.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "easydict",
    "matplotlib",
    "mesh2sdf",
    "numpy",
    "ocnn",
    "pandas>=2.3.3",
    "plyfile",
    "pytest",
    "scikit-image",
    "scipy",
    "tensorboard",
    "thsolver",
    "torch",
    "tqdm",
    "trimesh",
    "wget",
    "yacs",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ognn*", ]

[tool.pytest.ini_options]
testpaths = ["test"]
